<resources>
    <string name="app_name">"OSH "</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="enter_guide">Enter Guide</string>
    <string name="quiz">Quiz</string>
    <string name="book_mark">Bookmarks</string>
    <string name="ask">Frequently Asked Questions</string>
    <string name="check_update">Updates</string>
    <string name="settings">Settings</string>
    <string name="translate">Translate</string>
    <string name="search">Search</string>
    <string name="title_chapter_one">MINIMUM WORKING AGE</string>
    <string name="title_tb_qa">QA</string>
    <string name="receive_notify">Push notification</string>
    <string name="change_language">Select language</string>
    <string name="loading">Loading...</string>
    <string name="try_again">Try again</string>
    <string name="review_quiz">Review quiz</string>
    <string name="result">Results</string>
    <string name="unlucky_appease">Unlucky! Read the guide for more helpful information!</string>
    <string name="chapter">Chapter </string>
    <string name="title_activity_detail_law">ActivityDetailLaw</string>
    <string name="chapter_vi">Chương</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="appendix">Addendum</string>
    <string name="introduce">Introduce</string>
    <string name="delete_item">Delete bookmark?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- ******************** Setting *************************** -->
    <string name="push_notification">Push notification</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="share_this_app">Share this app</string>
    <string name="give_us_your_feedback">Give us your feedback</string>
    <string name="about_better_work">About EHS</string>
    <string name="lucky_appease">Very Good!!!</string>
</resources>
